--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,3 @@
 <a href="{{ site.baseurl }}/about/">About</a>
 <a href="{{ site.baseurl }}/projects/">Projects</a>
-<a href="{{ site.baseurl }}/contact/">Contact</a>
+<a href="{{ site.baseurl }}/contact/"><b>Contact</b></a>
